@@ -31,7 +31,7 @@
       },
       "develop" : {
          "requires" : {
-            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.016",
+            "Dist::Zilla::PluginBundle::Author::DBOOK" : "0.019",
             "Test::Pod" : "1.41"
          }
       },
@@ -57,6 +57,10 @@
       },
       "Perl::Critic::Policy::Freenode::BarewordFilehandles" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/BarewordFilehandles.pm",
+         "version" : "0.011"
+      },
+      "Perl::Critic::Policy::Freenode::DeprecatedFeatures" : {
+         "file" : "lib/Perl/Critic/Policy/Freenode/DeprecatedFeatures.pm",
          "version" : "0.011"
       },
       "Perl::Critic::Policy::Freenode::DiscouragedModules" : {
